tests/cnp/02-cnp-dns-all-pods-conflict.yaml
apiVersion: networking.k8s.aws/v1alpha1
kind: ClusterNetworkPolicy
metadata:
  name: test-conflicting-admin-policy
spec:
  priority: 90
  tier: Admin
  subject:
    pods:
      namespaceSelector: {}
      podSelector: {}
  egress:
    - name: test2-wrong
      action: Deny
      to:
        - pods:
            namespaceSelector:
              matchLabels:
                kubernetes.io/metadata.name: kube-system
            podSelector:
              matchLabels:
                k8s-app: kube-dns
      ports:
        - portNumber:
            protocol: UDP
            port: 53
        - portNumber:
            protocol: TCP
            port: 53
