tests/cnp/05-cnp-ingress-port-range.yaml
apiVersion: networking.k8s.aws/v1alpha1
kind: ClusterNetworkPolicy
metadata:
  name: cnp-ingress-port-range-example
spec:
  tier: Admin
  priority: 200
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          environment: production
      podSelector:
        matchLabels:
          app: web-server
  ingress:
  - name: allow-web-traffic-range
    action: Accept
    from:
    - namespaces:
        matchLabels:
          tier: application
    ports:
    - portRange:
        protocol: TCP
        start: 8000
        end: 8999
  - name: pass-web-traffic-range
    action: Pass
    from:
    - namespaces:
        matchLabels:
           tier: application
    ports:
    - portRange:
        protocol: TCP
        start: 80
        end: 443
