tests/cnp/09-cnp-invalid-egress-dns.yaml
apiVersion: networking.k8s.aws/v1alpha1
kind: ClusterNetworkPolicy
metadata:
  name: test-invalid-deny-domain
spec:
  tier: Admin
  priority: 100
  subject:
    namespaces: {}
  egress:
  - name: invalid-deny-domain
    action: Deny
    to:
    - domainNames:
      - "blocked.com"
