tests/cnp/10-cnp-invalid-ingress-dns.yaml
apiVersion: networking.k8s.aws/v1alpha1
kind: ClusterNetworkPolicy
metadata:
  name: cnp-invalid-ingress-dns
spec:
  tier: Admin
  priority: 200
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          environment: production
      podSelector:
        matchLabels:
          app: web-server
  ingress:
   - name: allow-internal-and-apis
     action: Accept
     from:
      - domainNames:
        - "api.github.com"
        - "registry-1.docker.io"
